# paper-chat-qa

./: .gitignore  README.md  azure-pipelines.yml  devcontainer.Dockerfile  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose.yml  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: main.yml
retriever/: Dockerfile  api.py  chains.py  cli.py  datamodel.py  docs.py  environment.yml  llm.py  pyproject.toml  requirements.txt  templates.py
scripts/: pull_llama2.sh
web/: .prettierrc  Dockerfile  README.md  index.html  nx.json  package-lock.json  package.json  project.json  vite.config.ts
web/.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  run.json
web/.nx/cache/6206312872066256867/: terminalOutput
web/.nx/cache/d/: server-process.json
web/e2e/: project.json
web/src/app/: app.module.css  app.tsx
web/src/app/components/: fileuploader.tsx  query.tsx
web/src/app/types/: file.ts
web/src/app/utils/: requests.ts
