[tool.poetry]
name = "paper-summariser"
version = "0.1.0"
description = "An LLM based application with a web based UI for answering questions on research papers"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
llama-index = "^0.10.43"
gradio = "^4.36.0"
qdrant-client = "^1.9.1"
openai = "^1.31.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"


[tool.poetry.group.test.dependencies]
pytest-mock = "^3.14.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
